# capstone

./: .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  test_microphone.py  test_stt.py
services/: terminal_executor.py
services/speech_to_speech/: audio_utils.py  helper.py  llm.py  pipeline.py  stt.py  tts.py
templates/: index.html
