[project]
name = "capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.1.1",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "scipy>=1.16.1",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=4.56.1",
]
