[project]
name = "capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "gputil>=1.4.0",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "psutil>=7.1.3",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "bitsandbytes>=0.43.0",
    "flash-attn>=2.8.3",
    "datasets>=4.4.0",
]
